Bug 92517 - KDE4-FileDialog: "Save as" has wrong Filter
Summary: KDE4-FileDialog: "Save as" has wrong Filter
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
5.1.0.0.alpha0+ Master
Hardware: Other Linux (All)
: medium normal
Assignee: Juergen Funk
URL:
Whiteboard: needsKDE target:5.1.0 target:5.0.0.3
Keywords:
: 92309 (view as bug list)
Depends on:
Blocks: 64827
  Show dependency treegraph
 
Reported: 2015-07-03 06:25 UTC by Juergen Funk
Modified: 2016-09-16 06:00 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Juergen Funk 2015-07-03 06:25:12 UTC
When you load a other type except odt, and you "Save as" the Filter is of odt, but it must be the other type.
For example: Load a *.docx and then "Save as" the filter is odt, but it must be "Microsoft *.docx".
Comment 1 Juergen Funk 2015-07-03 06:56:29 UTC
I have fixed here https://gerrit.libreoffice.org/16721
But i think that patch is mandatory for Lo 5.0 too
Comment 2 Katarina Behrens (Inactive) 2015-07-03 15:05:47 UTC
Confirmed (with KDE4 vcl plugin). NOT confirmed with generic plugin
Comment 3 Nis Jørgensen 2015-07-05 16:36:36 UTC
*** Bug 92309 has been marked as a duplicate of this bug. ***
Comment 4 Commit Notification 2015-07-09 12:18:36 UTC
Juergen Funk committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a93cfd5afb9072de00fc4b2a070f23ebdad6e4fe

tdf#92517 KDE4-FileDialog: "Save as" has wrong Filter

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2015-07-09 14:15:28 UTC
Juergen Funk committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e7352d5ada69f212dc813c4cbd257d036e7a27c8&h=libreoffice-5-0

tdf#92517 KDE4-FileDialog: "Save as" has wrong Filter

It will be available in 5.0.0.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Nis Jørgensen 2015-07-13 22:00:37 UTC
(In reply to Juergen Funk from comment #1)
> I have fixed here https://gerrit.libreoffice.org/16721
> But i think that patch is mandatory for Lo 5.0 too

I use Gentoo, and tried adding the patch as a user patch, then recompiling/installing. The bug persists. Not sure if I am doing something wrong. I can see that the patch has been applied to my source tree.
Comment 7 Julien Nabet 2016-05-15 21:32:53 UTC
Nis Jørgensen: is it ok with last stable version 5.1.2?
Indeed, considering targets, it should be.
Comment 8 Xisco Faulí 2016-09-15 22:37:02 UTC
Hello,
Is this bug fixed?
If so, could you please close it as RESOLVED FIXED?
Comment 9 Juergen Funk 2016-09-16 06:00:48 UTC
Hi Xisco Faulí,

the bug is fixed, i do it