tdf#92517 KDE4-FileDialog: "Save as" has wrong Filter

Fixing follow
 - The order of calling: first should be set the filter, after
   that can be set the current filter
 - change the function from "setCurrentFilter" to "setCurrentItem"
   When you set the filter over "setCurrentFilter" you need the full
   search string "extention|description" e.g. "*.docx|Microsoft Word.."
-  Not need the escape of slash (with that can not find
   "Microsoft Word 2007/2010 XML (.docx))"

Change-Id: Ie4f7d6fd619b391487ee944c3e745c855600ee54
Reviewed-on: https://gerrit.libreoffice.org/16721
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Katarina Behrens <Katarina.Behrens@cib.de>
(cherry picked from commit a93cfd5afb9072de00fc4b2a070f23ebdad6e4fe)